search; scrollable; tab not over video for iPad z-index bug; move overlay logic to player class; flush out popcornjs video cues

--- a/tpbafk/example/tpbafk.css
+++ b/tpbafk/example/tpbafk.css
@@ -4,50 +4,21 @@ body {
     margin:  0;
     font-family: Helvetica, Arial, sans-serif;
 }
-.title {
-    font-size:  0.8em;
-    font-style: normal;
+
+a {
+    color:   #49827B;
 }
 
-.time {
-    font-size:  0.75em;
-    font-style: normal;
+.body, .time{
+    display: none;
 }
 
-#video {
-    width: 100%;
-    height: 100%;
-    float: none;
-}
-#videodiv {
-    float: left;
-    position: relative;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.feed {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 315px;
-    padding-left: 5px;
-    height: 100%;
+.drawer {
     background:  black;
-    overflow: visible;
-}
-
-#feeddiv {
-    overflow-y:  auto;
 }
 
 .item {
     background: rgba(66,66,66, .5);
-    width: 265px;
-}
-.item .title {
-    display : none;
 }
 
 .item .title,
@@ -55,25 +26,12 @@ body {
     color: white;
 }
 
-.item .link,
-.item .link:hover
-{
-    color:   #49827B;
-}
-
-.item:hover {
-    background: rgba(99,99,99, .5);;
-}
-.item .time {
-    display: none;
-}
 
 .searchdiv {
     display: none;
 }
-
 #feeddiv {
-    top : 0;
+    top: 0;
 }
 
 .item .link {
@@ -83,20 +41,4 @@ body {
     width: 24px;
     height: 24px;
     margin-left: 5px;
-}
-
-.tab {
-    height: 25px;
-    width: 16px;
-    background: rgba(66, 66, 66, .5);
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    color: white;
-    z-index: 99;
-    display: none;
-    opacity: .8;
-    cursor: pointer;
 }
